--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "localstorage-memory-fd180-4",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tailwindcss -i ./src/input.css -o ./dist/output.css",
